# eodh-notebook-orchestrator

./: .gitignore  Dockerfile  README.md  config.env  main.py  ndvi_calculation.ipynb  pyproject.toml  quick_start.md  requirements.txt
create_qlr/: create_qlr.py  get_template.py  template_config.json
create_qlr/templates/: sentinel1_template.xml  sentinel2_template.xml
docs/: current_config.md  eodh_notebook_execution.md
run_notebook/: run_notebook.py
templates/: cog_preview.ipynb  ndvi_calculation.ipynb
