[project]
name = "jupyter-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "jupyter-notebookparams>=0.0.4",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "papermill>=2.6.0",
    "rioxarray>=0.19.0",
    "uvicorn>=0.35.0",
]
