[project]
name = "jupyter-test"
version = "0.1.0"
description = "API for executing notebooks and generating QLR files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "jupyter-notebookparams>=0.0.4",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "papermill>=2.6.0",
    "rioxarray>=0.19.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.0.0",
    "rasterio>=1.3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
